--- a/U/Links/styles/links.css
+++ b/U/Links/styles/links.css
@@ -8,8 +8,9 @@ html, body {
 }
 
 .center {
+  height: 100%;
   display: flex;
-  flex-flow row;
+  flex-flow: column;
   align-items: center;
   Justify-content: center;
 }
