--- a/U/Links/styles/links.css
+++ b/U/Links/styles/links.css
@@ -10,7 +10,7 @@ html, body {
 .center {
   height: 100%;
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
   align-items: center;
   Justify-content: center;
 }
