--- a/U/Links/styles/links.css
+++ b/U/Links/styles/links.css
@@ -11,7 +11,7 @@ html, body {
   height: 100%;
   display: flex;
   flex-flow: row;
-  flex-basis: 1;
+  flex-wrap: wrap;
   align-items: center;
   Justify-content: center;
 }
