--- a/U/Bootstrap/LandingPage/styles/main.css
+++ b/U/Bootstrap/LandingPage/styles/main.css
@@ -50,6 +50,9 @@ body {
 	text-align: center;
 	padding-top: 75%;
 	color:#FFF;
+	text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+		     0px 8px 13px rgba(0, 0, 0, 0.1),
+		     0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 
 hr {
